# omr-bubble-sheet-marker

./: .gitignore  CONTRIBUTING.md  Makefile  README.fa.md  README.md  UPGRADE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/omr_marker/: __main__.py  mark_answers.py
tests/: test_smoke.py
