[project]
name = "omr-bubble-sheet-marker"
version = "0.1.0"
description = "Offline OMR bubble marker for answer sheets (PDF/Image) using OpenCV and PyMuPDF."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "PyMuPDF>=1.23",
]

[project.scripts]
omr-mark = "omr_marker.mark_answers:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
